--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-    refProvide 'ohyeah:itvgame-client:1.0.0-SNAPSHOT'
+    refProvide 'ohyeah:itvgame-common:1.0.0-SNAPSHOT'
 }
 
 apply from: "${System.getenv().IGBT_HOME}/build.gradle"
