--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 midlet=sanguo.NewSanguoMIDlet
 appName=newsanguo
 price=1/2/5/10
-server=http://localhost:8080/itvgame-platform/protocolv2/processor
+server=http://192.168.16.70:8080/itvgame/protocolv2/processor
 subscribeFocus=ok
