--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 }
 
 dependencies {
-    refProvide 'ohyeah:itvgame-common-dev:1.0.1_3'
+    refProvide 'ohyeah:itvgame-common:1.2.0.1'
 }
 
 apply from: "${System.getenv().IGBT_HOME}/build.gradle"
