--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 midlet=sanguo.NewSanguoMIDlet
 appName=newsanguo
 price=1/2/5/10
-server=http://192.168.16.70:8080/itvgame/protocolv2/processor
+server=http://192.168.16.66:8080/itvgame/protocolv2/processor
 subscribeFocus=ok
+dijoyPayKey=11A0948854D98F799A0D4CB888678563
