--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ midlet=sanguo.NewSanguoMIDlet
 appName=newsanguo
 price=1/2/5/10
 server=http://localhost:8080/itvgame/protocolv2/processor
-subscribeFocus=ok
+subscribeFocus=cancle
