--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 midlet=sanguo.NewSanguoMIDlet
 appName=newsanguo
-price=1/2/5/10
+price=1/5/10
 server=http://localhost:8080/itvgame/protocolv2/processor
-subscribeFocus=cancle
+subscribeFocus=cancel
 appId=sp000003
